@@ -1,3 +1,8 @@
+2005-04-10  Esteban Sanchez  <steve-o@linups.org>
+
+	* src/comic-simple.c: (comic_simple_is_the_last): Now it check the
+	restrictions of the comic
+
 2005-04-07  Esteban Sanchez  <steve-o@linups.org>
 
 	* src/buoh.c: Some reorder of the code.
